[gd_scene load_steps=19 format=3 uid="uid://crxvjoevjk4y5"]

[ext_resource type="Script" path="res://scripts/shadowman_2.gd" id="1_1lqr3"]
[ext_resource type="Texture2D" uid="uid://cailykgl3h37t" path="res://art/Player/EVILShadowMan.png" id="2_3cutd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_47feb"]
atlas = ExtResource("2_3cutd")
region = Rect2(0, 17, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq1j8"]
atlas = ExtResource("2_3cutd")
region = Rect2(0, 0, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_nafgt"]
atlas = ExtResource("2_3cutd")
region = Rect2(0, 34, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_1okst"]
atlas = ExtResource("2_3cutd")
region = Rect2(48, 17, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqyd0"]
atlas = ExtResource("2_3cutd")
region = Rect2(48, 0, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_07emq"]
atlas = ExtResource("2_3cutd")
region = Rect2(48, 34, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0wtw"]
atlas = ExtResource("2_3cutd")
region = Rect2(16, 17, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_qim8c"]
atlas = ExtResource("2_3cutd")
region = Rect2(16, 0, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y2x2"]
atlas = ExtResource("2_3cutd")
region = Rect2(16, 34, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_48a3a"]
atlas = ExtResource("2_3cutd")
region = Rect2(32, 17, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbc35"]
atlas = ExtResource("2_3cutd")
region = Rect2(32, 0, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtvx7"]
atlas = ExtResource("2_3cutd")
region = Rect2(32, 34, 16, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_jyfni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_47feb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq1j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nafgt")
}],
"loop": true,
"name": &"walking_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1okst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqyd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07emq")
}],
"loop": true,
"name": &"walking_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0wtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qim8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y2x2")
}],
"loop": true,
"name": &"walking_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48a3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbc35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtvx7")
}],
"loop": true,
"name": &"walking_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_svrjk"]
radius = 332.297

[sub_resource type="CircleShape2D" id="CircleShape2D_hwd7b"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ufqu8"]
radius = 7.0

[node name="shadowman2" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_1lqr3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_jyfni")
animation = &"walking_down"
frame_progress = 0.177238

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-2, 1)
shape = SubResource("CircleShape2D_svrjk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_hwd7b")

[node name="shadow_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shadow_hitbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_ufqu8")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="shadow_hitbox" to="." method="_on_shadow_hitbox_body_entered"]
